--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -42,7 +42,7 @@
     <button
       type="submit"
       class="modal-action btn waves-effect"
-      [disabled]="form.invalid"
+      [disabled]="form.invalid || form.disabled"
     >
       Войти
     </button>
